[gd_scene load_steps=14 format=3 uid="uid://bdbtew7c0vbb4"]

[ext_resource type="Script" path="res://Scripts/ConfirmActionPopup/confirm_action_popup.gd" id="1_0rewm"]
[ext_resource type="Shader" path="res://Scenes/ConfirmActionPopup/confirm_action_popup.gdshader" id="2_fs2mp"]
[ext_resource type="Texture2D" uid="uid://dw4m5b6lory8p" path="res://Assets/Menu/Popup.png" id="3_30etk"]
[ext_resource type="Texture2D" uid="uid://biblbs4vdyniv" path="res://Assets/Menu/UI buttons=Sulge.png" id="4_01qwg"]
[ext_resource type="Texture2D" uid="uid://cmrxlc1fycakv" path="res://Assets/Menu/UI buttons=Jah_roheline.png" id="5_3lom2"]
[ext_resource type="Texture2D" uid="uid://cr20pyah4er2b" path="res://Assets/Menu/UI buttons=Jah_punane.png" id="6_okggn"]
[ext_resource type="Texture2D" uid="uid://bx5fodqcv0350" path="res://Assets/Menu/UI buttons=Ei_punane.png" id="7_p5jgw"]
[ext_resource type="Texture2D" uid="uid://im81goxpvl7j" path="res://Assets/Menu/UI buttons=Ei_roheline.png" id="8_wvntb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rvi8i"]
shader = ExtResource("2_fs2mp")
shader_parameter/lod = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_knrqx"]
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_bnrs0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_x3nxe"]
resource_name = "start_confirm_popup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_47eud"]
_data = {
"RESET": SubResource("Animation_bnrs0"),
"start_confirm_popup": SubResource("Animation_x3nxe")
}

[node name="ConfirmActionPopup" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_0rewm")

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_rvi8i")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -228.0
offset_right = 376.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_30etk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -372.0
offset_top = -230.5
offset_right = 372.0
offset_bottom = 230.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 2

[node name="x_button" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer3"]
self_modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 2
button_mask = 3
icon = ExtResource("4_01qwg")
icon_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer2/VBoxContainer3/x_button"]
position = Vector2(19, 18)
texture = ExtResource("4_01qwg")

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
text = "KAS OLED KINDEL, 
ET SOOVID MÃ„NGU SULGEDA?
"
label_settings = SubResource("LabelSettings_knrqx")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="yes_button" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer3/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("5_3lom2")

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer2/HBoxContainer3/HBoxContainer/yes_button"]
position = Vector2(133, 50)
texture = ExtResource("6_okggn")

[node name="no_button" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer3/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 2
icon = ExtResource("7_p5jgw")

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer2/HBoxContainer3/HBoxContainer/no_button"]
position = Vector2(139, 50)
texture = ExtResource("8_wvntb")

[node name="Separator5" type="Control" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_47eud")
}
